Attempt to fix nav on mobile

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -3,7 +3,6 @@
 nav {
   position: absolute;
   background-color: var(--background-secondary);
-  padding: 1rem 0;
   overflow: hidden;
   width: 100%;
   margin: 0 auto;
@@ -11,6 +10,10 @@ nav {
   text-align: center;
   width: 100%;
   max-width: 600px;
+  height: 4.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 nav a {
