--- a/src/components/Session.css
+++ b/src/components/Session.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 1rem;
+  padding: 1rem 1rem 4.5rem;
 }
 
 .timer-container {
